# nomad_drain

./: Cargo.toml
nomad_drain/: Cargo.toml
nomad_drain/fixtures/: node_drain.json  node_eligibility.json  nomad_node.json  nomad_nodes.json
nomad_drain/src/: aws.rs  error.rs  lib.rs  nomad.rs  vault.rs
nomad_drain_lambda/: Cargo.toml
nomad_drain_lambda/src/: error.rs  main.rs
terraform/: README.md  main.tf  nomad.tf  output.tf  variables.tf  vault.tf
terraform/nomad/: policy.hcl
terraform/vault/: nomad_role.json  policy.hcl
utils/mock_aws_auth/: docker-compose.yml
utils/mock_aws_auth/aws/: Dockerfile  requirements.txt
utils/mock_aws_auth/aws_sts/: .dockerignore  Cargo.toml  Dockerfile
utils/mock_aws_auth/aws_sts/src/: main.rs
utils/mock_aws_auth/configure/: Dockerfile  configure.sh
utils/mock_aws_auth/vault/: Dockerfile
