[package]
name = "nomad_drain"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
futures = "0.1"
log = "0.4"
reqwest = "0.9.5"
rusoto_autoscaling = "0.36.0"
rusoto_core = "0.36.0"
rusoto_sts = "0.36.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5.1"

[dev-dependencies]
rusoto_mock = "0.30.0"
